--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,84 @@ footer {
     width: 100vw;
 }
 
+
+
+
+
+  input[type=checkbox] {
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    position: relative;
+    display: block;
+    width: 135px;
+    height: 75px;
+    margin: 50px auto;
+    border-radius: 17px;
+    cursor: pointer;
+    background: white;
+  }
+
+  a {
+      text-decoration: none;
+      color: #265301;
+      margin-left:0.25em
+  }
+
+  a:visited {
+    color: #437A16;
+  }
+  
+  a:focus {
+    border-bottom: 1px solid;
+    background: #BAE498;
+  }
+  
+  a:hover {
+    background: #CDFEAA;
+  }
+  
+  a:active {
+    background: #265301;
+    color: #CDFEAA;
+  }
+
+  input[type=checkbox]:after,
+  input[type=checkbox]:before {
+    box-sizing: border-box;
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    width: 55px;
+    height: 55px;
+    border: 5px solid;
+    border-radius: 12px;
+    text-align: center;
+    line-height: 42px;
+    font-size: 32px;
+    transition: all 0.3s ease-out;
+  }
+
+  input[type=checkbox]:before {
+    content: "°C";
+    color: #2316d9;
+    border-color: #6145ff;
+    background: #d1ccff;
+  }
+
+  input[type=checkbox]:after {
+    left: auto;
+    right: 5px;
+    content: "°F";
+    border-color: #a83c34;
+    color: #ba3030;
+    background: #ffbdbb;
+    opacity: 0.4;
+  }
+
+  input[type=checkbox]:checked:after {
+    opacity: 1;
+  }
+
+  input[type=checkbox]:checked:before {
+    opacity: 0.4;
+  }
