--- a/styles.css
+++ b/styles.css
@@ -49,8 +49,10 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #212529;
-    padding: 5px;
+    
+    background: linear-gradient(to right, #212529, rgb(44, 44, 31));
+    height: auto;
+    font-size: 1.25vw;
     max-width: 100%;
     color: #fff;
 }
