--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     
 }
 
-html { 
+body { 
     background: url(background.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
