--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,60 @@ footer {
   }
 
 
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+    
+}
+
+.loader.hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.spinner {
+    /* Spinner size and color */
+    width: 1.5rem;
+    height: 1.5rem;
+    border-top-color: #09d;
+    border-left-color: #09d;
+  
+    animation: spinner 400ms linear infinite;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 50%;  
+    
+  }
+  
+  @keyframes spinner {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  
+  .spinner-large {
+    width: 5rem;
+    height: 5rem;
+    border-width: 6px;
+  }
+  
+  .spinner-slow {
+    animation: spinner 1s linear infinite;
+  }
+
+
 
   /*
  * Adapted from script generated with CSS Flag Sprite generator (https://www.flag-sprites.com/)
